--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
   "scripts": {
     "dev": "next dev",
     "dev-turbo": "next dev -p 3000 --turbopack",
-    "build": "npm-run-all check-env build-db check-db build-tracker build-app",
+    "build": "npm-run-all check-env build-db check-db build-tracker build-geo build-app",
     "start": "next start",
     "build-docker": "npm-run-all build-db build-tracker build-geo build-app",
     "start-docker": "npm-run-all check-db update-tracker set-routes-manifest start-server",
@@ -26,7 +26,6 @@
     "build-geo": "node scripts/build-geo.js",
     "build-db-schema": "prisma db pull",
     "build-db-client": "prisma generate",
-    "build:server": "tsc --project server --outDir server/dist",
     "set-routes-manifest": "node scripts/set-routes-manifest.js",
     "update-tracker": "node scripts/update-tracker.js",
     "update-db": "prisma migrate deploy",
