--- a/package.json
+++ b/package.json
@@ -9,46 +9,46 @@
     "type": "git",
     "url": "https://github.com/umami-software/umami.git"
   },
-  "scripts": {
-    "dev": "next dev",
-    "dev-turbo": "next dev -p 3000 --turbopack",
-    "build": "npm-run-all check-env build-db check-db build-tracker build-geo build-app",
-    "start": "next start",
-    "build-docker": "npm-run-all build-db build-tracker build-geo build-app",
-    "start-docker": "npm-run-all check-db update-tracker set-routes-manifest start-server",
-    "start-env": "node scripts/start-env.js",
-    "start-server": "node server.js",
-    "build-app": "next build",
-    "build-components": "rollup -c rollup.components.config.mjs",
-    "build-tracker": "rollup -c rollup.tracker.config.mjs",
-    "build-db": "npm-run-all copy-db-files build-db-client",
-    "build-lang": "npm-run-all format-lang compile-lang download-country-names download-language-names clean-lang",
-    "build-geo": "node scripts/build-geo.js",
-    "build-db-schema": "prisma db pull",
-    "build-db-client": "prisma generate",
-    "set-routes-manifest": "node scripts/set-routes-manifest.js",
-    "update-tracker": "node scripts/update-tracker.js",
-    "update-db": "prisma migrate deploy",
-    "check-db": "node scripts/check-db.js",
-    "check-env": "node scripts/check-env.js",
-    "copy-db-files": "node scripts/copy-db-files.js",
-    "extract-messages": "formatjs extract \"src/components/messages.ts\" --out-file build/extracted-messages.json",
-    "merge-messages": "node scripts/merge-messages.js",
-    "generate-lang": "npm-run-all extract-messages merge-messages",
-    "format-lang": "node scripts/format-lang.js",
-    "compile-lang": "formatjs compile-folder --ast build/messages public/intl/messages",
-    "clean-lang": "prettier --write ./public/intl/**/*.json",
-    "check-lang": "node scripts/check-lang.js",
-    "download-country-names": "node scripts/download-country-names.js",
-    "download-language-names": "node scripts/download-language-names.js",
-    "change-password": "node scripts/change-password.js",
-    "lint": "next lint --quiet",
-    "prepare": "node -e \"if (process.env.NODE_ENV !== 'production'){process.exit(1)} \" || husky install",
-    "postbuild": "node scripts/postbuild.js",
-    "test": "jest",
-    "cypress-open": "cypress open cypress run",
-    "cypress-run": "cypress run cypress run"
-  },
+"scripts": {
+  "dev": "next dev",
+  "dev-turbo": "next dev -p 3000 --turbopack",
+  "build": "npm install --legacy-peer-deps && npm-run-all check-env build-db check-db build-tracker build-geo build-app",
+  "start": "next start",
+  "build-docker": "npm-run-all build-db build-tracker build-geo build-app",
+  "start-docker": "npm-run-all check-db update-tracker set-routes-manifest start-server",
+  "start-env": "node scripts/start-env.js",
+  "start-server": "node server.js",
+  "build-app": "next build",
+  "build-components": "rollup -c rollup.components.config.mjs",
+  "build-tracker": "rollup -c rollup.tracker.config.mjs",
+  "build-db": "npm-run-all copy-db-files build-db-client",
+  "build-lang": "npm-run-all format-lang compile-lang download-country-names download-language-names clean-lang",
+  "build-geo": "node scripts/build-geo.js",
+  "build-db-schema": "prisma db pull",
+  "build-db-client": "prisma generate",
+  "set-routes-manifest": "node scripts/set-routes-manifest.js",
+  "update-tracker": "node scripts/update-tracker.js",
+  "update-db": "prisma migrate deploy",
+  "check-db": "node scripts/check-db.js",
+  "check-env": "node scripts/check-env.js",
+  "copy-db-files": "node scripts/copy-db-files.js",
+  "extract-messages": "formatjs extract \"src/components/messages.ts\" --out-file build/extracted-messages.json",
+  "merge-messages": "node scripts/merge-messages.js",
+  "generate-lang": "npm-run-all extract-messages merge-messages",
+  "format-lang": "node scripts/format-lang.js",
+  "compile-lang": "formatjs compile-folder --ast build/messages public/intl/messages",
+  "clean-lang": "prettier --write ./public/intl/**/*.json",
+  "check-lang": "node scripts/check-lang.js",
+  "download-country-names": "node scripts/download-country-names.js",
+  "download-language-names": "node scripts/download-language-names.js",
+  "change-password": "node scripts/change-password.js",
+  "lint": "next lint --quiet",
+  "prepare": "node -e \"if (process.env.NODE_ENV !== 'production'){process.exit(1)} \" || husky install",
+  "postbuild": "node scripts/postbuild.js",
+  "test": "jest",
+  "cypress-open": "cypress open cypress run",
+  "cypress-run": "cypress run cypress run"
+},
   "lint-staged": {
     "**/*.{js,jsx,ts,tsx}": [
       "prettier --write",
