--- a/package.json
+++ b/package.json
@@ -93,3 +93,84 @@
     "jsonwebtoken": "^9.0.2",
     "jszip": "^3.10.1",
     "kafkajs": "^2.1.0",
+    "maxmind": "^4.3.24",
+    "md5": "^2.3.0",
+    "next": "15.3.3",
+    "node-fetch": "^3.2.8",
+    "npm-run-all": "^4.1.5",
+    "papaparse": "^5.5.3",
+    "prisma": "6.7.0",
+    "pure-rand": "^6.1.0",
+    "react": "^18.3.1",
+    "react-basics": "^0.126.0",
+    "react-dom": "^18.3.1",
+    "react-error-boundary": "^4.0.4",
+    "react-intl": "^6.5.5",
+    "react-simple-maps": "^2.3.0",
+    "react-use-measure": "^2.0.4",
+    "react-window": "^1.8.6",
+    "request-ip": "^3.3.0",
+    "semver": "^7.5.4",
+    "serialize-error": "^12.0.0",
+    "thenby": "^1.3.4",
+    "uuid": "^9.0.0",
+    "zod": "^3.24.3",
+    "zustand": "^4.5.5"
+  },
+  "devDependencies": {
+    "@formatjs/cli": "^4.2.29",
+    "@netlify/plugin-nextjs": "^5.10.6",
+    "@rollup/plugin-alias": "^5.0.0",
+    "@rollup/plugin-commonjs": "^25.0.4",
+    "@rollup/plugin-json": "^6.0.0",
+    "@rollup/plugin-node-resolve": "^15.2.0",
+    "@rollup/plugin-replace": "^5.0.2",
+    "@rollup/plugin-terser": "^0.4.4",
+    "@svgr/rollup": "^8.1.0",
+    "@svgr/webpack": "^8.1.0",
+    "@types/jest": "^29.5.14",
+    "@types/node": "^22.13.4",
+    "@types/react": "^19.0.8",
+    "@types/react-dom": "^19.0.2",
+    "@types/react-window": "^1.8.8",
+    "@typescript-eslint/eslint-plugin": "^6.7.3",
+    "@typescript-eslint/parser": "^6.7.3",
+    "cross-env": "^7.0.3",
+    "cypress": "^13.6.6",
+    "esbuild": "^0.25.0",
+    "eslint": "^8.33.0",
+    "eslint-config-next": "^14.0.4",
+    "eslint-config-prettier": "^8.5.0",
+    "eslint-import-resolver-alias": "^1.1.2",
+    "eslint-plugin-css-modules": "^2.12.0",
+    "eslint-plugin-cypress": "^2.15.1",
+    "eslint-plugin-import": "^2.29.1",
+    "eslint-plugin-jest": "^27.9.0",
+    "eslint-plugin-prettier": "^4.0.0",
+    "extract-react-intl-messages": "^4.1.1",
+    "husky": "^8.0.3",
+    "jest": "^29.7.0",
+    "lint-staged": "^14.0.1",
+    "postcss": "^8.4.31",
+    "postcss-flexbugs-fixes": "^5.0.2",
+    "postcss-import": "^15.1.0",
+    "postcss-preset-env": "7.8.3",
+    "prettier": "^2.6.2",
+    "prompts": "2.4.2",
+    "rollup": "^3.28.0",
+    "rollup-plugin-copy": "^3.4.0",
+    "rollup-plugin-delete": "^2.0.0",
+    "rollup-plugin-dts": "^5.3.1",
+    "rollup-plugin-esbuild": "^5.0.0",
+    "rollup-plugin-node-externals": "^6.1.1",
+    "rollup-plugin-postcss": "^4.0.2",
+    "stylelint": "^15.10.1",
+    "stylelint-config-css-modules": "^4.4.0",
+    "stylelint-config-prettier": "^9.0.3",
+    "stylelint-config-recommended": "^14.0.0",
+    "tar": "^6.1.2",
+    "ts-jest": "^29.1.2",
+    "ts-node": "^10.9.1",
+    "typescript": "^5.5.3"
+  }
+}
