chatgpt go brrr

--- a/package.json
+++ b/package.json
@@ -23,8 +23,8 @@
     "build-tracker": "rollup -c rollup.tracker.config.mjs",
     "build-db": "npm-run-all copy-db-files build-db-client",
     "build-lang": "npm-run-all format-lang compile-lang download-country-names download-language-names clean-lang",
-    "build-geo": "node scripts/build-geo.js",
-    "check-geo": "node scripts/check-geo.js",
+    "build-geo": "node --loader ts-node/esm scripts/build-geo.js",
+    "check-geo": "node --loader ts-node/esm scripts/build-geo.js",
     "build-db-schema": "prisma db pull",
     "build-db-client": "prisma generate",
     "set-routes-manifest": "node scripts/set-routes-manifest.js",
